--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="red-box">Red</div>
       <div class="green-box">Green</div>
       <div class="blue-box">Blue</div>
+      <!-- <div class="blue-box">Blue 2</div> -->
       <div class="clear"></div>
 
       <h2>Hi, I'm the Base Project!</h2>
@@ -31,6 +32,26 @@
         first to create separate playgrounds for animations, manipulations,
         event handlers etc.
       </p>
+    </div>
+    <div class="lightbox">
+      <h2>Lightbox</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc malesuada
+        ut neque eget volutpat. Ut sit amet lorem quis mi volutpat maximus.
+        Suspendisse tincidunt sodales nibh eget egestas. Sed sed sagittis eros,
+        pulvinar mattis lacus. Integer et neque vel libero lobortis pretium.
+        Vivamus malesuada pretium vulputate. Proin eu libero velit. Nunc ut
+        felis quis nunc varius sodales eu nec lectus. Vivamus condimentum
+        ultrices dui et ultrices. Maecenas eget est vitae diam feugiat ultrices
+        at id tortor. Duis eget massa tincidunt nibh pellentesque luctus.
+        Suspendisse lacinia neque eu mauris bibendum, ac accumsan lectus
+        pellentesque. Ut quis diam consectetur, mollis nisl eget, ullamcorper
+        lorem.
+      </p>
+      <form action="">
+        <input type="email" placeholder="your email" />
+        <input type="submit" value="Sign me up" />
+      </form>
     </div>
   </body>
 </html>
