CSS selectors with jQuery

--- a/index.html
+++ b/index.html
@@ -32,6 +32,47 @@
         first to create separate playgrounds for animations, manipulations,
         event handlers etc.
       </p>
+      <ul id="list">
+        <li>
+          Main Item 1
+          <ul>
+            <li>Sub item 1</li>
+            <li>Sub item 2</li>
+          </ul>
+        </li>
+        <li>
+          Main Item 2
+          <ul>
+            <li>Sub item 1</li>
+            <li>Sub item 2</li>
+          </ul>
+        </li>
+        <li>
+          Main Item 3
+          <ul>
+            <li>Sub item 1</li>
+            <li>Sub item 2</li>
+          </ul>
+        </li>
+        <li>
+          Main Item 4
+          <ul>
+            <li>Sub item 1</li>
+            <li>Sub item 2</li>
+          </ul>
+        </li>
+      </ul>
+      <form action="">
+        <label for="text">Text</label>
+        <input type="text" id="text" /><br />
+        <label for="email">Email</label>
+        <input type="email" id="email" /><br />
+        <label for="story">Tell us your story:</label>
+        <textarea id="story" name="story" cols="30" rows="10">
+Write something here</textarea
+        ><br />
+        <input type="submit" value="Submit" />
+      </form>
     </div>
     <div class="lightbox">
       <h2>Lightbox</h2>
